objects/DOA_Mapping__c/DOA_Mapping__c.object-meta.xml
<CustomObject>
    <description>[Perficient, Scott Roose, 03/12/2019] This object was created as part of the project to move the .NET app iApproval into Salesforce.</description>
    <label>DOA Mapping</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>DOA Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DOA Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>