objects/DOA_Mapping__c/fields/CapEx_Limit__c.field-meta.xml
<CustomField>
    <fullName>CapEx_Limit__c</fullName>
    <label>CapEx Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>