objects/DOA_Mapping__c/fields/Credits_Refunds_Limit__c.field-meta.xml
<CustomField>
    <fullName>Credits_Refunds_Limit__c</fullName>
    <label>Credits / Refunds Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>