objects/DOA_Mapping__c/fields/General_Limit__c.field-meta.xml
<CustomField>
    <fullName>General_Limit__c</fullName>
    <label>General Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>