objects/DOA_Mapping__c/fields/iCert_Limit__c.field-meta.xml
<CustomField>
    <fullName>iCert_Limit__c</fullName>
    <inlineHelpText>Approval Limit for iCert</inlineHelpText>
    <label>iCert Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>